
2022-01-33  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: REPORT struct changes
	* fileio.c: changes to get CR LF usage to match Microfocus
	* reportio.c: Updates for SUM expression-list
			Multiple fields become and expression
			To compute the expression values a call back is done

2022-01-04  Ron Norman <rjn@inglenet.com>

	* fisam.c: Handle primary key with DUPLICATES

2022-01-03  Simon Sobisch <simonsobisch@gnu.org>

	* coblocal.h, common.h: moved some internal limits to coblocal.h
	* fileio.c, common.h: moved COB_CHAR_xxx to fileio.c

2022-01-01  Ron Norman <rjn@inglenet.com>

	* numeric.c: Speed up cob_decimal_adjust routine

2021-12-31  Ron Norman <rjn@inglenet.com>

	* numeric.c: Speed up cob_decimal_add, cob_decimal_sub, cob_decimal_cmp
				Use the powers of 10 table instead of recomputing
				Add cob_decimal_copy for use by emitted code

2021-12-30  Ron Norman <rjn@inglenet.com>

	* reportio.c: Move data fields before invoking DECLARATIVES code

2021-12-29  Ron Norman <rjn@inglenet.com>

	* reportio.c: Process CONTROL Headings in opposite order to Footings

2021-12-27  Ron Norman <rjn@inglenet.com>

	* reportio.c: Fixed spacing and test cases to match Microfocus

2021-12-12  Ron Norman <rjn@inglenet.com>

	* common.h: Added flag_do_rollback
	* fileio.c: If flag_do_rollback is set then all WRITE/DELETE/REWRITE
	  to be done regardless of file open mode

2021-12-08  Ron Norman <rjn@inglenet.com>

	* move.c,common.h: Added cob_set_compx for saving values into
				COMP-X field

2021-12-05  Ron Norman <rjn@inglenet.com>

	* fileio.c, coblocal.h: Removed unused/unsettable variable cob_ls_uses_cr

2021-11-28  Ron Norman <rjn@inglenet.com>

	* fileio.c: Changes to open sequential files in binary mode on Windows
				(Untested on real Windows at this time)

2021-11-18  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_get_sig_name, cob_get_sig_description,
	  cob_set_sig_description): hardened against unexpected signal numbers